--- a/css/home.css
+++ b/css/home.css
@@ -106,7 +106,7 @@ body{
     min-width: 800px;
 }
 
-td{
+td,th{
     text-align: left;
     padding: 5px 8px;
 }
@@ -127,6 +127,7 @@ td{
     font: normal normal medium 12px/21px Roboto;
     letter-spacing: 0px;
     color: #3d3d3d
+    /* opacity: 1; */
     
 }
 
